AI-JADEDEVS4/src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Account_CSM__c</fullName>
        <formula>Account.Account_CSM__r.FirstName + &apos; &apos; + Account.Account_CSM__r.LastName</formula>
        <label>Account CSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adaptive_Subsidiary__c</fullName>
        <label>Adaptive Subsidiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Quote__r.Billing_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Company__c</fullName>
        <formula>BillToContact.Account.Name</formula>
        <label>Billing Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Quote__r.Billing_Country__c</formula>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <formula>Quote__r.Billing_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Quote__r.Billing_State__c</formula>
        <label>Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Quote__r.Billing_Street__c</formula>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Details_Term_Months__c</fullName>
        <description>Term_Months__c - Free_Months__c</description>
        <formula>Term_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Details Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConversionID__c</fullName>
        <externalId>true</externalId>
        <label>ConversionID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dont_Sync_with_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you don&apos;t want the Order to Sync with NetSuite</inlineHelpText>
        <label>Dont Sync with NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Months__c</fullName>
        <formula>VALUE(TEXT(Quote__r.Free_Months__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <description>If this is for an installment, this will be the installment amount</description>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integration_Sync__c</fullName>
        <label>Integration Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <description>Changed the field label from Memo to Internal Notes</description>
        <label>Internal Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MultiYear_Discount_Amount__c</fullName>
        <formula>Quote__r.Active_MultiYear_Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MultiYear Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Order_Number__c</fullName>
        <label>NetSuite Order #</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <description>This field used for NetSuite integration</description>
        <formula>Opportunity.CloseDate</formula>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order 18 digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_End_Date__c</fullName>
        <label>Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Start_Date__c</fullName>
        <label>Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Term_Months__c</fullName>
        <label>Order Term Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Touch__c</fullName>
        <label>Order Touch</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <formula>Opportunity.PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Type__c</fullName>
        <formula>TEXT(Opportunity.Partner_Commission_Type__c)</formula>
        <label>Partner Commission Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>Text(Quote__r.SBQQ__PaymentTerms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <description>This is the project id in OpenAir</description>
        <inlineHelpText>This is the project id in OpenAir</inlineHelpText>
        <label>Project ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <description>The PS Project Manager assigned to this Order</description>
        <inlineHelpText>The PS Project Manager assigned to this Order</inlineHelpText>
        <label>Project Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>The PS Project Status associated with this Order</description>
        <inlineHelpText>The PS Project Status associated with this Order</inlineHelpText>
        <label>Project Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prorated_Per_Month__c</fullName>
        <description>TotalAmount /  Term_Months__c</description>
        <formula>TotalAmount /  Term_Months__c</formula>
        <label>Prorated Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Cap__c</fullName>
        <formula>Quote__r.Renewal_Cap__c</formula>
        <label>Renewal Cap %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_term__c</fullName>
        <formula>Opportunity.Renewal_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders_SalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <formula>Quote__r.Provisioning_City__c</formula>
        <label>Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Company__c</fullName>
        <formula>ShipToContact.Account.Name</formula>
        <label>Ship To Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <formula>Quote__r.Provisioning_Country__c</formula>
        <label>Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <formula>Quote__r.Provisioning_PostalCode__c</formula>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <formula>Quote__r.Provisioning_State__c</formula>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <formula>Quote__r.Provisioning_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect__c</fullName>
        <description>The PS Solution Architect assigned to the Order</description>
        <inlineHelpText>The PS Solution Architect assigned to the Order</inlineHelpText>
        <label>Solution Architect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <label>Special Terms</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <formula>Quote__r.Display_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <formula>Quote__r.SBQQ__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <formula>Quote__r.Quote_Term_Length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <formula>Term_Months__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_minus_free_months__c</fullName>
        <formula>Term_Months__c -  Free_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term minus free months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Booking_Details__c</fullName>
        <label>Total Booking Details</label>
        <summaryForeignKey>Booking_Detail__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Non_T_M_Booking__c</fullName>
        <label>Total Non-T&amp;M Booking</label>
        <summarizedField>OrderItem.Total_Price_AI__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Service_Type__c</field>
            <operation>equals</operation>
            <value>Non-T&amp;M</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Products__c</fullName>
        <label>Total Order Products</label>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_Revenue__c</fullName>
        <label>Total Service Revenue</label>
        <summarizedField>OrderItem.Total_Price_AI__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Revenue_Type__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Revenue__c</fullName>
        <inlineHelpText>SUM of all Subscription line items</inlineHelpText>
        <label>Total Subscription Revenue</label>
        <summarizedField>OrderItem.Total_Price_AI__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Revenue_Type__c</field>
            <operation>equals</operation>
            <value>Subscription</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_T_M_Booking__c</fullName>
        <label>Total T&amp;M Booking</label>
        <summarizedField>OrderItem.Total_Price_AI__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Service_Type__c</field>
            <operation>equals</operation>
            <value>T&amp;M</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>Activated_Today</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>NetSuite_Id__c</columns>
        <columns>NetSuite_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filters>
        <filters>
            <field>ORDERS.ACTIVATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Activated Today</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.TYPE</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>NetSuite_Order_Number__c</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.ACTIVATED_DATE</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>Partner_Account__c</columns>
        <columns>Sales_Representative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Dont_Sync_with_NetSuite__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedOrdersNotSynced</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.TYPE</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>NetSuite_Order_Number__c</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.ACTIVATED_DATE</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>Partner_Account__c</columns>
        <columns>Sales_Representative__c</columns>
        <columns>ACTIVATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Dont_Sync_with_NetSuite__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>NetSuite_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Activated Orders not synced</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>ORDERS.TYPE</columns>
        <columns>ACTIVATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ORDERS.TYPE</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>ORDERS.TYPE</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>ORDERS.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>